Modified the structure file

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                     </div>
                 </div>
                 <form class="subscribe">
-                    <input type="email" name="email" placeholder="Enter Your Email" autocomplete="off" style="caret-color: var(--mainColor2);">
+                    <input type="email" name="email" placeholder="Enter Your Email" autocomplete="off">
                     <input type="submit" value="Subscribe">
                 </form>
             </article>
@@ -711,7 +711,7 @@
 
         <section class="stats" id="stats" style="padding: var(--sectionPadding);">
             <article class="container">
-                <span class="main-title">Our Awesome Stats</span>
+                <h1>Our Awesome Stats</h1>
                 <div class="grid-columns--4">
                     <div class="state">
                         <i class="fa-regular fa-user"></i>
@@ -736,6 +736,72 @@
                 </div>
             </article>
         </section>
+
+        <!-- Discount Section -->
+        <section class="discount" id="discount">
+            <div class="discount-show">
+                <div class="show-info">
+                    <h1>We Have A Discount</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
+                    <img src="images/discount.png" alt="">
+                </div>
+            </div>
+            <div class="discount-form">
+                <h1>Request A Discount</h1>
+                <form autocomplete="off">
+                    <input type="text" name="name" placeholder="Your Name">
+                    <input type="email" name="email" placeholder="Your Email" required>
+                    <input type="text" name="phone" placeholder="Your Phone" required>
+                    <textarea name="message" rows="7" placeholder="Tell Us About Your Needs" style="resize: none;"></textarea>
+                    <input type="submit" value="Send">
+                </form>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer style="background-color: #191919; padding: 50px 0;">
+            <article class="container">
+                <div class="grid-columns--4">
+                    <div class="author-info">
+                        <h2>Mohamed</h2>
+                        <a href="https://www.facebook.com/mohamed.abubakr.111"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.linkedin.com/in/mohamed-abobakr-87a982200/"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.github.com/Mabubakr2001"><i class="fa-brands fa-github"></i></a>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste aspernatur</p>
+                    </div>
+                    <ul class="important-links">
+                        <li><a href="#"><i class="fa-sharp fa-solid fa-angles-right"></i>Important Link 1</a></li>
+                        <li><a href="#"><i class="fa-sharp fa-solid fa-angles-right"></i>Important Link 2</a></li>
+                        <li><a href="#"><i class="fa-sharp fa-solid fa-angles-right"></i>Important Link 3</a></li>
+                        <li><a href="#"><i class="fa-sharp fa-solid fa-angles-right"></i>Important Link 4</a></li>
+                        <li><a href="#"><i class="fa-sharp fa-solid fa-angles-right"></i>Important Link 5</a></li>
+                    </ul>
+                    <div class="business-informations">
+                        <div class="info">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <span>Egypt, Alexandria, Inside My Room.</span>
+                        </div>
+                        <div class="info">
+                            <i class="fa-regular fa-clock"></i>
+                            <span>Business Hours: From 9:00 To 17:00</span>
+                        </div>
+                        <div class="info">
+                            <i class="fa-solid fa-phone-volume"></i>
+                            <span>+201208437507</span>
+                        </div>
+                    </div>
+                    <div class="imgs-grid">
+                        <img src="images/gallery-01.png" alt="">
+                        <img src="images/gallery-02.png" alt="">
+                        <img src="images/gallery-03.jpg" alt="">
+                        <img src="images/gallery-04.png" alt="">
+                        <img src="images/gallery-05.jpg" alt="">
+                        <img src="images/gallery-06.png" alt="">
+                    </div>
+                </div>
+                <span>Made With 🤍 By Mohamed Abobakr</span>
+            </article>
+        </footer>
         <script src="main.js"></script>
     </body>
 </html>
