--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <img src="images/landing-image.png" alt="">
             </div>
             <a href="#articles"><i class="fa-solid fa-angles-down"></i></a>
+            <span class="go-to-up"><i class="fa-sharp fa-solid fa-arrow-up"></i></span>
         </section>
 
         <!-- Articles Section -->
@@ -709,6 +710,7 @@
             </article>
         </section>
 
+        <!-- Stats Section -->
         <section class="stats" id="stats" style="padding: var(--sectionPadding);">
             <article class="container">
                 <h1>Our Awesome Stats</h1>
