Modified the structure file

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div>
                     <h1>Welcome, To Mohamed's World</h1>
-                    <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
+                    <p>Here I'm gonna share everything about my life. The books that I'm reading, the games that I'm playing, stories and events.</p>
                 </div>
                 <img src="images/landing-image.png" alt="">
             </div>
