--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img src="images/landing-image.png" alt="">
             </div>
             <a href="#articles"><i class="fa-solid fa-angles-down"></i></a>
-            <span class="go-to-up"><i class="fa-sharp fa-solid fa-arrow-up"></i></span>
+            <span class="go-to--up"><i class="fa-sharp fa-solid fa-arrow-up"></i></span>
         </section>
 
         <!-- Articles Section -->
